# AI-Data-Analyst-SaaS

./: .gitignore  BingSiteAuth.xml  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  robots.txt
app/: __init__.py  config.py  main.py
app/analysis/: __init__.py  correlations.py  service.py  statistics.py
app/auth/: __init__.py  schemas.py  service.py  utils.py
app/data_ingestion/: __init__.py  parsers.py  service.py  validators.py
app/reports/: __init__.py  generator.py  templates.py
app/visualization/: __init__.py  charts.py  service.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analyses.py  auth.py  datasets.py
backend/app/core/: config.py  database.py  exceptions.py  response.py  security.py
backend/app/models/: analysis.py  base.py  dataset.py  user.py
backend/app/services/: ai_service.py  dataset_service.py
backend/app/utils/: pagination.py  validators.py
backend/tests/: test_response.py  test_validators.py
client/: .env.production  Ads.txt  ads.txt  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  api.js  index.css
frontend/: Dockerfile  package-lock.json  package.json
server/: .env  .env.example  index.js  package-lock.json  package.json
server/controllers/: aiController.js  analysisController.js  authController.js  uploadController.js
server/middleware/: authMiddleware.js  errorHandler.js
server/models/: Dataset.js  User.js
server/routes/: ai.js  analysis.js  upload.js
server/scripts/: create_dataset_and_call.js  create_test_user.js
server/utils/: csvUtils.js  geminiUtils.js  statsUtils.js
tests/: conftest.py  test_config.py  test_main.py
tests/test_analysis/: test_correlations.py  test_service.py  test_statistics.py
tests/test_auth/: test_service.py  test_service_extended.py  test_utils.py  test_utils_extended.py
tests/test_data_ingestion/: test_parsers.py  test_parsers_extended.py  test_service.py  test_validators.py
tests/test_reports/: test_generator.py  test_templates.py
tests/test_visualization/: test_charts.py  test_service.py
(+25 files in other folders)
