[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-analyst-saas"
version = "0.1.0"
description = "AI-powered Data Analyst SaaS platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic[email]>=2.6,<3",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "openpyxl>=3.1,<4",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4.1,<5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "pandas-stubs>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
